--- a/TravelLive/Base.lproj/LaunchScreen.storyboard
+++ b/TravelLive/Base.lproj/LaunchScreen.storyboard
@@ -16,10 +16,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="BO6-io-2uC">
-                                <rect key="frame" x="87" y="378" width="240" height="150"/>
+                                <rect key="frame" x="87" y="430" width="240" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="cYf-u8-EjP"/>
+                                    <constraint firstAttribute="height" constant="36" id="cYf-u8-EjP"/>
                                     <constraint firstAttribute="width" constant="240" id="tAv-D8-CWo"/>
                                 </constraints>
                             </imageView>
@@ -27,8 +27,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.98431372549019602" green="0.92156862745098034" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="BO6-io-2uC" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fdj-hz-Gk1"/>
-                            <constraint firstItem="BO6-io-2uC" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="thY-gH-RtX"/>
+                            <constraint firstItem="BO6-io-2uC" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fdj-hz-Gk1"/>
+                            <constraint firstItem="BO6-io-2uC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="thY-gH-RtX"/>
                         </constraints>
                     </view>
                 </viewController>
