--- a/TravelLive/View/VideoWall.storyboard
+++ b/TravelLive/View/VideoWall.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6aa-0x-lr8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6aa-0x-lr8">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -25,10 +25,10 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6aa-0x-lr8" secondAttribute="trailing" id="aEF-fu-zyr"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="6aa-0x-lr8" secondAttribute="bottom" id="bpA-Xh-nBv"/>
-                            <constraint firstItem="6aa-0x-lr8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="j72-Z6-r5E"/>
-                            <constraint firstItem="6aa-0x-lr8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="yhD-Qd-E8s"/>
+                            <constraint firstItem="6aa-0x-lr8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="6bD-pM-y5D"/>
+                            <constraint firstAttribute="trailing" secondItem="6aa-0x-lr8" secondAttribute="trailing" id="aEF-fu-zyr"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="6aa-0x-lr8" secondAttribute="bottom" id="nsM-jw-MC1"/>
+                            <constraint firstItem="6aa-0x-lr8" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="yhD-Qd-E8s"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="khu-v4-PHz"/>
