--- a/TravelLive/View/Detail/DetailViewCommentCell.xib
+++ b/TravelLive/View/Detail/DetailViewCommentCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,7 +24,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRD-BC-c7N">
-                        <rect key="frame" x="110" y="14" width="41.5" height="23"/>
+                        <rect key="frame" x="110" y="14" width="41.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -41,6 +42,7 @@
                     <constraint firstAttribute="bottom" secondItem="lRD-BC-c7N" secondAttribute="bottom" constant="5" id="50v-pg-QHs"/>
                     <constraint firstItem="8Nu-yG-av0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="KDQ-Lq-AJn"/>
                     <constraint firstItem="4rp-8H-uLr" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="10" id="N4v-ot-3Ms"/>
+                    <constraint firstAttribute="bottom" secondItem="8Nu-yG-av0" secondAttribute="bottom" id="Wq4-9W-VWC"/>
                     <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="XfZ-aF-VSg"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lRD-BC-c7N" secondAttribute="trailing" constant="16" id="mGd-ac-4sM"/>
                     <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15.5" id="pCb-56-KtG"/>
